django-limor-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: django-limor-service
spec:
  type: ClusterIP
  selector:
    app: django-limor
  ports:
  - name: http
    protocol: TCP
    port: 8001
    targetPort: 8001
