nginx-new-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-new-service
spec:
  selector:
    app: nginx-new
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
